@startuml Database Diagram

<style>
title {
  HorizontalAlignment right
  FontSize 24
'   FontColor blue
}

header {
  HorizontalAlignment center
  FontSize 16
'   FontColor purple
  FontStyle bold
}

' footer {
'   HorizontalAlignment left
'   FontSize 28
'   FontColor red
' }

legend {
  FontSize 30
  BackGroundColor yellow
  Margin 30
  Padding 50
}

caption {
  FontSize 32
}
</style>

' Определение стилей для элементов базы данных с одинаковыми отступами
!define PK(x)     <b><color:#b8861b>PK</color>   x</b>
!define FK(x)     <b><color:#aaaaaa>FK</color>   x</b>
!define FPK(x)    <b><color:#b8861b>FPK</color> x</b>
!define column(x) <b><color:#efefef><&media-record></color>     x</b>
!define table(x)  entity x << (T, white) >>

' Настройка стилей для всей диаграммы
skinparam {
    PackageStyle rectangle
    ArrowColor #2688d4
    ArrowThickness 1.5
    EntityBorderThickness 1.5
    EntityBorderColor #2688d4
    EntityBackgroundColor white
    EntityFontColor black
    EntityFontSize 14
    padding 4
    roundCorner 10
    defaultTextAlignment left
    shadowing false
}

' header some header

' footer some footer

title Database Diagram

' caption This is caption

' legend
' The legend
' end legend

' Определение таблиц базы данных
table(subjects) {
    PK(id): INT AUTO_INCREMENT
    column(title): TEXT NOT NULL
    column(description): TEXT
    column(created_at): TEXT NOT NULL
    column(updated_at): TEXT NULL
}

table(courses) {
    PK(id): INT AUTO_INCREMENT
    column(guid): TEXT NOT NULL
    column(title): TEXT NOT NULL
    column(description): TEXT
    column(language_code): TEXT
    column(created_at): TEXT NOT NULL
    column(updated_at): TEXT NULL
    --
    FK(subject_id): INT NULL
}

table(units) {
    PK(id): INT AUTO_INCREMENT
    column(guid): TEXT NOT NULL
    column(title): TEXT NOT NULL
    column(description): TEXT
    column(content): TEXT
    column(last_review_date): TIMESTAMP
    column(review_count): INT
    column(created_at): TEXT NOT NULL
    column(updated_at): TEXT NULL
    --
    FK(course_id): INT NOT NULL
}

table(words) {
    PK(id): INT AUTO_INCREMENT
    column(guid): TEXT NOT NULL
    column(word): TEXT NOT NULL
    column(transcription): TEXT
    column(translation): TEXT
    column(note): TEXT
    column(pronunciation): BLOB
    column(last_review_date): TIMESTAMP
    column(review_count): INT
    column(rate): REAL
    column(created_at): TEXT NOT NULL
    column(updated_at): TEXT NULL
    --
    FK(unit_id): INT NOT NULL
}

table(examples) {
    PK(id): INT AUTO_INCREMENT
    column(guid): TEXT NOT NULL
    column(sentence): TEXT NOT NULL
    column(translation): TEXT
    --
    FK(word_id): INT NOT NULL
}

table(irregular_forms) {
  PK(id): INT AUTO_INCREMENT
  column(guid): TEXT NOT NULL
  column(first_form): TEXT NOT NULL
  column(first_form_transcription): TEXT
  column(first_form_translation): TEXT
  column(first_form_pronunciation): BLOB
  column(part_of_speech): TEXT NOT NULL
  column(second_form): TEXT NOT NULL
  column(second_form_transcription): TEXT
  column(second_form_translation): TEXT
  column(second_form_pronunciation): BLOB
  column(third_form): TEXT
  column(third_form_transcription): TEXT
  column(third_form_translation): TEXT
  column(third_form_pronunciation): BLOB
  column(last_review_date): TIMESTAMP
  column(review_count): INT
  column(rate): REAL
  column(created_at): TEXT NOT NULL
  column(updated_at): TEXT NULL
  --
  FK(unit_id): INT NOT NULL
}

table(study_cards) {
  PK(id): INT AUTO_INCREMENT
  column(guid): TEXT NOT NULL
  column(kind): INT NOT NULL
  column(title): TEXT NOT NULL
  column(body): TEXT
  column(dialogue): TEXT
  column(code_block): TEXT
  column(reveal_mode): INT
  column(last_review_date): TIMESTAMP
  column(review_count): INT
  column(rate): REAL
  column(created_at): TEXT NOT NULL
  column(updated_at): TEXT NULL
  --
  FK(unit_id): INT NOT NULL
}

table(test_cards) {
  PK(id): INT AUTO_INCREMENT
  column(guid): TEXT NOT NULL
  column(kind): INT NOT NULL
  column(title): TEXT
  column(text): TEXT
  column(hint): TEXT
  column(image): BLOB
  column(formatted_text): TEXT
  column(explanation): TEXT
  column(options): TEXT
  column(correct_answers): TEXT
  column(last_review_date): TIMESTAMP
  column(review_count): INT
  column(rate): REAL
  column(created_at): TEXT NOT NULL
  column(updated_at): TEXT NULL
  --
  FK(unit_id): INT NOT NULL
}

' Определение связей между таблицами
subjects |o--o{ courses

courses ||--o{ units

units ||--o{ words
units ||--o{ irregular_forms
units ||--o{ study_cards
units ||--o{ test_cards

words ||--o{ examples

@enduml
